<resources>
    <string name="default_img_description">this is icon</string>
    <string name="tag_item_bg">tag_item_bg</string>
    <string name="tag_main_bg">tag_main_bg</string>
    <string name="tag_constant_bg">tag_constant_bg</string>
    <string name="tag_item_round_bg">tag_item_round_bg</string>
    <string name="tag_recycler">tag_recycler</string>

    <string name="app_name">EhConvert</string>
    <string name="title_home">Home</string>
    <string name="title_category">Category</string>
    <string name="title_mine">Me</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">email</string>
    <string name="prompt_password">password(6～32)</string>
    <string name="action_sign_in">Login</string>
    <string name="action_new_register">sign up</string>
    <string name="action_reset_password">forget password?</string>
    <string name="action_submit">Submit</string>
    <string name="action_register">Sign up</string>
    <string name="prompt_verify">verification code</string>
    <string name="action_verify">Send</string>
    <string name="prompt_countdown">s</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">email invalid</string>
    <string name="error_invalid_password">The password can not be less than 6 digits</string>
    <string name="error_incorrect_password">password error</string>
    <string name="countdown">%1$d&#160;%2$s</string>
    <string name="tab_recommend">Recommend</string>
    <string name="tab_update">Latest</string>
    <string name="tab_ranking">Ranking</string>
    <string name="default_username">noname</string>
    <string name="default_email">DefaultMail@gmail.com</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Splash Button</string>
    <string name="dummy_content">WelCome!</string>
    <string name="theme_type_black">Dark Theme</string>
    <string name="theme_type_white">Light Theme</string>
    <string name="night_mode">Night Mode</string>
    <string name="favorites">Favorites</string>
    <string name="history">History</string>
    <string name="filter">Filter</string>
    <string name="non_h_mode">Non-H Mode</string>
    <string name="cache">Cache</string>
    <string name="version">Version</string>
    <string name="logout">Logout</string>
    <string name="prompt_clear_cache">Are you sure you want to clear the cache?</string>
    <string name="prompt_logout">Are you sure you want to logout?</string>
    <string name="title_bar">title_bar</string>
    <string name="loading">loading</string>
    <string name="item_img">item_img</string>
    <string name="action_read">read now</string>
    <string name="action_try_again">try again</string>
    <string name="prompt_author">Author:&#160;&#160;%1$s</string>
    <string name="prompt_category">Category:&#160;&#160;%1$s</string>
    <string name="prompt_posted">Posted:&#160;&#160;%1$s</string>
    <string name="prompt_page">Filecount:&#160;&#160;%1$d</string>
    <string name="prompt_uploader">Uploader:&#160;&#160;%1$s</string>
    <string name="prompt_rating">Rating:&#160;&#160;%1$s</string>
    <string name="prompt_star">%1$d</string>
    <string name="prompt_popularity">%1$d</string>
    <string name="action_retry">retry</string>
    <string name="prompt_load_failed">load&#160;failed</string>
    <string name="query_hint">title</string>
    <string name="search_title">title</string>
    <string name="search_author">author</string>
    <string name="search_uploader">uploader</string>
    <array name="item_search">
        <item>title</item>
        <item>author</item>
        <item>uploader</item>
    </array>
    <string name="no_data">no data</string>
    <string name="dialog_cancel">no</string>
    <string name="dialog_ok">yes</string>
    <string name="prompt_page_number">%1$d/%2$d</string>
    <string name="prompt_title_bottomsheet_favorite">select a folder</string>
    <string name="action_new_folder_title_bottomsheet_favorite">+ new folder</string>
    <string name="prompt_new_folder_title">folder name</string>
    <string name="hint_new_folder_dialog">less than 16</string>
    <string name="prompt_search_title">search</string>
    <string name="action_save">save</string>
    <string name="prompt_popup_configuration">Global Configuration</string>
    <string name="left_or_right">left/right</string>
    <string name="vertical_or_horizontal">vertical/horizontal</string>
    <string name="scroll_vertically">scroll vertically</string>

    <string name="rename">rename</string>
    <string name="rename_hint">input your new name</string>
    <string name="delete">delete</string>
    <string name="delete_hint">Do you really want to delete the folder named %1$s ?</string>
    <string name="prompt_warning">warning</string>
    <string name="prompt_comment">comment</string>
    <string name="prompt_download">downloading</string>
    <string name="action_download">download</string>
    <string name="action_install">install</string>
    <string name="action_ignore">ignore</string>
    <string name="tab_summary">summary</string>
    <string name="tab_comment">comment（%1$d）</string>
    <string name="comment_hint">say something</string>
    <string name="profile_header_hint">input a image url</string>
    <string name="profile_header">profile header</string>
    <string name="language">Language</string>
    <string name="follow">follow</string>
    <string name="unfollow">unfollow</string>
    <string name="others_profile_header">others_profile_header</string>
    <string name="empty_string"> </string>

</resources>
