<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/main_background"
    android:paddingTop="15dp">

    <cn.xhl.client.manga.custom.TextImageSpan
        android:id="@+id/author_fragment_manga_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:ellipsize="end"
        android:enabled="true"
        android:gravity="center"
        android:longClickable="true"
        android:maxLines="1"
        android:text="@string/prompt_author"
        android:textColor="?attr/item_text"
        android:textIsSelectable="true"
        android:textSize="@dimen/sp_14"
        app:imageSpanLeft="@mipmap/span_author"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <cn.xhl.client.manga.custom.TextImageSpan
        android:id="@+id/category_fragment_manga_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/prompt_category"
        android:textColor="?attr/item_text"
        android:textSize="@dimen/sp_14"
        app:imageSpanLeft="@mipmap/span_category"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/author_fragment_manga_summary" />

    <cn.xhl.client.manga.custom.TextImageSpan
        android:id="@+id/posted_fragment_manga_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/prompt_posted"
        android:textColor="?attr/item_text"
        android:textSize="@dimen/sp_14"
        app:imageSpanLeft="@mipmap/span_posted"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_fragment_manga_summary" />

    <cn.xhl.client.manga.custom.TextImageSpan
        android:id="@+id/page_fragment_manga_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/prompt_page"
        android:textColor="?attr/item_text"
        android:textSize="14sp"
        app:imageSpanLeft="@mipmap/span_filecount"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posted_fragment_manga_summary" />

    <cn.xhl.client.manga.custom.TextImageSpan
        android:id="@+id/uploader_fragment_manga_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:enabled="true"
        android:gravity="center"
        android:longClickable="true"
        android:maxLines="1"
        android:text="@string/prompt_uploader"
        android:textColor="?attr/item_text"
        android:textIsSelectable="true"
        android:textSize="14sp"
        app:imageSpanLeft="@mipmap/span_uploader"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/page_fragment_manga_summary" />

    <cn.xhl.client.manga.custom.TextImageSpan
        android:id="@+id/rating_fragment_manga_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/prompt_rating"
        android:textColor="?attr/item_text"
        android:textSize="14sp"
        app:imageSpanLeft="@mipmap/span_rating"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploader_fragment_manga_summary" />

    <Button
        android:id="@+id/btn_fragment_manga_summary"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:background="?attr/item_background"
        android:text="@string/action_read"
        android:textAllCaps="false"
        android:textColor="?attr/item_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />
</android.support.constraint.ConstraintLayout>