<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?attr/item_background"
    android:tag="@string/tag_item_bg">

    <TextView
        android:id="@+id/text_item_setting"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="parent"
        android:visibility="visible"
        android:gravity="center"
        android:text="@string/theme_type_black"
        android:textColor="?attr/item_text"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/content_item_setting"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_marginEnd="10dp"
        app:layout_constraintRight_toLeftOf="@+id/arrow_right_item_setting"
        android:textColor="?attr/item_text"
        android:textSize="13sp"
        android:text="@string/delete"
        android:visibility="gone" />

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/arrow_right_item_setting"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="5dp"
        android:visibility="gone"
        app:placeholderImage="@mipmap/arrow_right" />

    <Switch
        android:id="@+id/switch_item_setting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="@dimen/dp_10"
        android:clickable="false"
        android:focusable="false"
        android:visibility="gone" />

    <TextView
        android:id="@+id/logout_item_setting"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/logout"
        android:textColor="?attr/colorAccent"
        android:textSize="16sp" />
</android.support.constraint.ConstraintLayout>