<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/item_background">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/item_background"
        android:padding="@dimen/activity_horizontal_margin">

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/header_fragment_login"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginTop="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:placeholderImage="@mipmap/profile_header"
            app:roundAsCircle="true" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email_fragment_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/header_fragment_login">

            <cn.xhl.client.manga.custom.EmailAutoCompleteTextView
                android:id="@+id/auto_fragment_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/item_text"
                android:textSize="17sp" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_fragment_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_fragment_login">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:textColor="@color/item_text"
                android:textSize="17sp" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_in_button_fragment_login"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/action_sign_in"
            android:textAllCaps="false"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_fragment_login" />

        <TextView
            android:id="@+id/reset_password_fragment_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:text="@string/action_reset_password"
            android:textColor="@color/item_text"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button_fragment_login" />

        <TextView
            android:id="@+id/register_fragment_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="5dp"
            android:text="@string/action_new_register"
            android:textColor="@color/item_text"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button_fragment_login" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>