<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_login"
    android:padding="16dp">

    <com.facebook.drawee.view.SimpleDraweeView
        android:id="@+id/header_fragment_reset_password"
        android:layout_width="75dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15"
        app:placeholderImage="@mipmap/default_header"
        app:roundAsCircle="true" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/email_fragment_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">

        <cn.xhl.client.manga.custom.EmailAutoCompleteTextView
            android:id="@+id/auto_fragment_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:completionThreshold="1"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:textSize="17sp" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/verify_fragment_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_fragment_reset_password">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890"
            android:hint="@string/prompt_verify"
            android:imeActionLabel="@string/prompt_verify"
            android:imeOptions="actionUnspecified"
            android:inputType="phone|number"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:textSize="17sp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/password_fragment_reset_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/verify_fragment_reset_password">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:textSize="17sp" />

    </android.support.design.widget.TextInputLayout>

    <cn.xhl.client.manga.custom.CountDownButton
        android:id="@+id/verify_button_fragment_reset_password"
        style="?android:textAppearanceSmall"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/action_verify"
        android:textAlignment="textEnd"
        android:textSize="17sp"
        app:countDownInterval="1"
        android:paddingEnd="5dp"
        android:paddingStart="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.55"
        app:millisInFuture="30"
        app:textAfterSeconds="@string/prompt_countdown" />

    <Button
        android:id="@+id/submit_button_fragment_reset_password"
        style="?android:textAppearanceSmall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/action_submit"
        android:textSize="17sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_fragment_reset_password" />
</android.support.constraint.ConstraintLayout>